--- a/index.html
+++ b/index.html
@@ -4,7 +4,79 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="fonts/fonts.css">
+    <link rel="stylesheet" href="styles/global.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="header__menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item header__links-list-item_no-bullit" href="#">
+            <a class="header__link header__link_active">главная</a>
+          </li>
+          <li class="header__links-list-item" href="#">
+            <a class="header__link">посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-item" href="#">
+            <a class="header__link">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="header__logo">
+        <img
+          src="images/logo-black.svg"
+          class="header__logo-image"
+        >
+      </a>
+      <address class="address">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <a href="#">наб. Принсенграхт 263- 265, Амстердам</a>
+      </address>
+    </header>
+    <main>
+      <div class="cover">
+        <h1 class="cover__title">
+          <span class="aligned-text aligned-text_left">Оно</span> 
+          <span class="aligned-text aligned-text_center">тебе</span> 
+          <span class="aligned-text aligned-text_right">надо</span>
+        </h1>
+        <div class="cover__description">
+          <p class="cover__description-text">Аукцион вещей, вкоторые никто не верил</p>
+          <button class="bet-button">сделать ставку</button>
+        </div>
+        <div class="overlay"></div>
+      </div>
+      <div class="lots">
+        <h1></h1>
+        <ul>
+          <li>
+            <a>
+              <article>
+
+              </article>
+            </a>
+          </li>
+        </ul>
+        <a></a>
+      </div>
+      <div class="about">
+        <div></div>
+        <div>
+          <h1></h1>
+          <div></div>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <address class="address">
+      </address>
+      <nav class="footer__menu">
+      </nav>
+      <div class="logos">
+      </div>
+    </footer>
+  </body>
 </html>
