--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <address class="address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <a href="#">наб. Принсенграхт 263- 265, Амстердам</a>
+        <a href="#" class="no-decoration">наб. Принсенграхт 263- 265, Амстердам</a>
       </address>
 
     </header>
@@ -49,7 +49,7 @@
           <span class="aligned-text aligned-text_right">надо</span>
         </h1>
         <div class="cover__description">
-          <p class="cover__description-text">Аукцион вещей, вкоторые никто не верил</p>
+          <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
           <button class="bet-button">Сделать ставку</button>
         </div>
         <div class="overlay"></div>
@@ -67,6 +67,7 @@
                 <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
               </article>
             </a>
+            <div class="overlay"></div>
           </li>
           <li class="lots__card-list-item">
             <a class="card-link">
@@ -75,6 +76,7 @@
                 <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
               </article>
             </a>
+            <div class="overlay"></div>
           </li>
           <li class="lots__card-list-item">
             <a class="card-link">
@@ -83,6 +85,7 @@
                 <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
               </article>
             </a>
+            <div class="overlay"></div>
           </li>
         </ul>
         <a class="lots__look-more-link" href="#">посмотреть больше</a>
