--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <img
           src="images/logo-black.svg"
           class="header__logo-image"
+          alt="Логотип сайта"
         >
       </a>
 
@@ -42,7 +43,7 @@
     </header>
     <main>
 
-      <div class="cover">
+      <section class="cover">
         <h1 class="cover__title">
           <span class="aligned-text aligned-text_left">Оно</span> 
           <span class="aligned-text aligned-text_center">тебе</span> 
@@ -53,9 +54,9 @@
           <button class="bet-button">Сделать ставку</button>
         </div>
         <div class="overlay"></div>
-      </div>
+      </section>
 
-      <div class="lots padding-wrapper">
+      <section class="lots padding-wrapper">
         <h1 class="lots__heading">лоты</h1>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
@@ -89,14 +90,19 @@
           </li>
         </ul>
         <a class="lots__look-more-link" href="#">посмотреть больше</a>
-      </div>
+      </section>
 
-      <div class="about padding-wrapper">
+      <section class="about padding-wrapper">
         <div class="about__column column-logo">
           <div class="about__logo">
-            <img class="about__logo-image" src="images/logo-white.svg">
+            <img
+              class="about__logo-image"
+              src="images/logo-white.svg"
+              alt="Логотип сайта"
+            >
           </div>
         </div>
+
         <div class="about__column">
           <h1 class="about__title">Об аукционе</h1>
           <div class="text-wrapper">
@@ -105,7 +111,7 @@
 на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
           </div>
         </div>
-      </div>
+      </section>
     </main>
     <footer class="footer">
 
@@ -128,24 +134,36 @@
           </li>
         </ul>
       </nav>
+
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#">
-            <img class="footer__social-icon" src="images/yt.svg">
+            <img
+              class="footer__social-icon"
+              src="images/yt.svg"
+              alt="Логотип youtube"
+            >
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#">
-            <img class="footer__social-icon" src="images/vk.svg">
+            <img
+              class="footer__social-icon"
+              src="images/vk.svg"
+              alt="Логотип VK"
+            >
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#">
-            <img class="footer__social-icon" src="images/pinterest.svg">
+            <img
+              class="footer__social-icon"
+              src="images/pinterest.svg"
+              alt="Логотип Pinterest"
+            >
           </a>
         </li>
       </ul>
-
 
     </footer>
   </body>
