--- a/index.html
+++ b/index.html
@@ -1,170 +1,165 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="fonts/fonts.css">
-    <link rel="stylesheet" href="styles/global.css">
-    <link rel="stylesheet" href="styles/style.css">
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-  </head>
-  <body>
-    <header class="header">
 
-      <nav class="header__menu">
-        <ul class="header__links-list">
-          <li class="header__links-list-item header__links-list-item_no-bullit" >
-            <a class="header__link header__link_active" href="#">главная</a>
-          </li>
-          <li class="header__links-list-item" >
-            <a class="header__link" href="#">посмотреть лоты</a>
-          </li>
-          <li class="header__links-list-item">
-            <a class="header__link" href="#">об аукционе</a>
-          </li>
-        </ul>
-      </nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="fonts/fonts.css">
+  <link rel="stylesheet" href="styles/global.css">
+  <link rel="stylesheet" href="styles/style.css">
+  <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+</head>
 
-      <a class="header__logo">
-        <img
-          src="images/logo-black.svg"
-          class="header__logo-image"
-          alt="Логотип сайта"
-        >
-      </a>
+<body>
+  <header class="header">
 
-      <address class="address">
-        <a href="tel:+99995555555">+9 999 555 5555</a>
-        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <a href="#" class="no-decoration">наб. Принсенграхт 263- 265, Амстердам</a>
-      </address>
-
-    </header>
-    <main>
-
-      <section class="cover">
-        <h1 class="cover__title">
-          <span class="aligned-text aligned-text_left">Оно</span> 
-          <span class="aligned-text aligned-text_center">тебе</span> 
-          <span class="aligned-text aligned-text_right">надо</span>
-        </h1>
-        <div class="cover__description">
-          <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
-          <button class="bet-button">Сделать ставку</button>
-        </div>
-        <div class="overlay"></div>
-      </section>
-
-      <section class="lots padding-wrapper">
-        <h1 class="lots__heading">лоты</h1>
-        <ul class="lots__card-list">
-          <li class="lots__card-list-item">
-            <a class="card-link">
-              <article class="card card_type_film">
-                <h2 class="card__title">
-                    Фильм режиссёра, который бросил киношколу
-                </h2>
-                <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
-              </article>
-            </a>
-            <div class="overlay"></div>
-          </li>
-          <li class="lots__card-list-item">
-            <a class="card-link">
-              <article class="card card_type_book">
-                <h2 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h2>
-                <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
-              </article>
-            </a>
-            <div class="overlay"></div>
-          </li>
-          <li class="lots__card-list-item">
-            <a class="card-link">
-              <article class="card card_type_picture">
-                <h2 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h2>
-                <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
-              </article>
-            </a>
-            <div class="overlay"></div>
-          </li>
-        </ul>
-        <a class="lots__look-more-link" href="#">посмотреть больше</a>
-      </section>
-
-      <section class="about padding-wrapper">
-        <div class="about__column column-logo">
-          <div class="about__logo">
-            <img
-              class="about__logo-image"
-              src="images/logo-white.svg"
-              alt="Логотип сайта"
-            >
-          </div>
-        </div>
-
-        <div class="about__column">
-          <h1 class="about__title">Об аукционе</h1>
-          <div class="text-wrapper">
-          <p class="about__text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
-          <p class="about__text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
-на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
-          </div>
-        </div>
-      </section>
-    </main>
-    <footer class="footer">
-
-      <address class="address footer__address">
-        <a href="tel:+99995555555">+9 999 555 5555</a>
-        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <a href="#" class="no-decoration">наб. Принсенграхт 263- 265, Амстердам</a>
-      </address>
-
-      <nav class="footer__menu">
-        <ul class="footer__menu-list">
-          <li class="footer__menu-list-item">
-            <a class="footer__menu-link footer__menu-link_active" href="#">главная</a>
-          </li>
-          <li class="footer__menu-list-item">
-            <a class="footer__menu-link" href="#">посмотреть лоты</a>
-          </li>
-          <li class="footer__menu-list-item">
-            <a class="footer__menu-link" href="#">об аукционе</a>
-          </li>
-        </ul>
-      </nav>
-
-      <ul class="footer__social-list">
-        <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#">
-            <img
-              class="footer__social-icon"
-              src="images/yt.svg"
-              alt="Логотип youtube"
-            >
-          </a>
+    <nav class="header__menu">
+      <ul class="header__links-list">
+        <li class="header__links-list-item header__links-list-item_no-bullit">
+          <a class="header__link header__link_active" href="#">главная</a>
         </li>
-        <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#">
-            <img
-              class="footer__social-icon"
-              src="images/vk.svg"
-              alt="Логотип VK"
-            >
-          </a>
+        <li class="header__links-list-item">
+          <a class="header__link" href="#">посмотреть лоты</a>
         </li>
-        <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#">
-            <img
-              class="footer__social-icon"
-              src="images/pinterest.svg"
-              alt="Логотип Pinterest"
-            >
-          </a>
+        <li class="header__links-list-item">
+          <a class="header__link" href="#">об аукционе</a>
         </li>
       </ul>
+    </nav>
 
-    </footer>
-  </body>
+    <a class="header__logo">
+      <img src="images/logo-black.svg" class="header__logo-image" alt="Логотип сайта">
+    </a>
+
+    <address class="address">
+      <a href="tel:+99995555555">+9 999 555 5555</a>
+      <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+      <a href="#" class="no-decoration">наб. Принсенграхт 263- 265, Амстердам</a>
+    </address>
+
+  </header>
+  <main>
+
+    <section class="cover">
+      <h1 class="cover__title">
+        <span class="aligned-text aligned-text_left">Оно</span>
+        <span class="aligned-text aligned-text_center">тебе</span>
+        <span class="aligned-text aligned-text_right">надо</span>
+      </h1>
+      <div class="cover__description">
+        <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
+        <button class="bet-button">Сделать ставку</button>
+      </div>
+      <div class="overlay"></div>
+    </section>
+
+    <section class="lots padding-wrapper">
+      <h1 class="lots__heading">лоты</h1>
+      <ul class="lots__card-list">
+        <li class="lots__card-list-item">
+          <a class="card-link">
+            <article class="card card_type_film">
+              <h2 class="card__title">
+                Фильм режиссёра, который бросил киношколу
+              </h2>
+              <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не
+                знали, что режиссёр — Пол Томас Андерсон?</p>
+            </article>
+          </a>
+          <div class="overlay"></div>
+        </li>
+        <li class="lots__card-list-item">
+          <a class="card-link">
+            <article class="card card_type_book">
+              <h2 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h2>
+              <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на
+                древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная
+                с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на
+                «Улисса» Джеймса Джойса?</p>
+            </article>
+          </a>
+          <div class="overlay"></div>
+        </li>
+        <li class="lots__card-list-item">
+          <a class="card-link">
+            <article class="card card_type_picture">
+              <h2 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h2>
+              <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на
+                инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали,
+                что это — одна из революционных работ Кандинского?</p>
+            </article>
+          </a>
+          <div class="overlay"></div>
+        </li>
+      </ul>
+      <a class="lots__look-more-link" href="#">посмотреть больше</a>
+    </section>
+
+    <section class="about padding-wrapper">
+      <div class="about__column column-logo">
+        <div class="about__logo">
+          <img class="about__logo-image" src="images/logo-white.svg" alt="Логотип сайта">
+        </div>
+      </div>
+
+      <div class="about__column">
+        <h1 class="about__title">Об аукционе</h1>
+        <div class="text-wrapper">
+          <p class="about__text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.
+            Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка
+            или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+          </p>
+          <p class="about__text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах
+            растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+            на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную
+            культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали
+            культовыми. </p>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer class="footer">
+
+    <address class="address footer__address">
+      <a href="tel:+99995555555">+9 999 555 5555</a>
+      <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+      <a href="#" class="no-decoration">наб. Принсенграхт 263- 265, Амстердам</a>
+    </address>
+
+    <nav class="footer__menu">
+      <ul class="footer__menu-list">
+        <li class="footer__menu-list-item">
+          <a class="footer__menu-link footer__menu-link_active" href="#">главная</a>
+        </li>
+        <li class="footer__menu-list-item">
+          <a class="footer__menu-link" href="#">посмотреть лоты</a>
+        </li>
+        <li class="footer__menu-list-item">
+          <a class="footer__menu-link" href="#">об аукционе</a>
+        </li>
+      </ul>
+    </nav>
+
+    <ul class="footer__social-list">
+      <li class="footer__social-list-item">
+        <a class="footer__social-link" href="#">
+          <img class="footer__social-icon" src="images/yt.svg" alt="Логотип youtube">
+        </a>
+      </li>
+      <li class="footer__social-list-item">
+        <a class="footer__social-link" href="#">
+          <img class="footer__social-icon" src="images/vk.svg" alt="Логотип VK">
+        </a>
+      </li>
+      <li class="footer__social-list-item">
+        <a class="footer__social-link" href="#">
+          <img class="footer__social-icon" src="images/pinterest.svg" alt="Логотип Pinterest">
+        </a>
+      </li>
+    </ul>
+
+  </footer>
+</body>
+
 </html>
