--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <nav class="header__menu">
       <ul class="header__links-list">
-        <li class="header__links-list-item header__links-list-item_no-bullit">
+        <li class="header__links-list-item">
           <a class="header__link header__link_active" href="#">главная</a>
         </li>
         <li class="header__links-list-item">
@@ -29,7 +29,7 @@
     </nav>
 
     <a class="header__logo">
-      <img src="images/logo-black.svg" class="header__logo-image" alt="Логотип сайта">
+      <img src="images/logo-black.svg" class="header__logo-image" alt="Логотип 'Оно тебе надо'">
     </a>
 
     <address class="address">
@@ -41,7 +41,23 @@
   </header>
   <main>
 
-    <section class="cover">
+    <div class="layout-checker">
+      <img src="cover1.jpg" alt="Макет для сверки" class="layout-checker__overlay">
+      <section class="cover">
+        <h1 class="cover__title">
+          <span class="aligned-text aligned-text_left">Оно</span>
+          <span class="aligned-text aligned-text_center">тебе</span>
+          <span class="aligned-text aligned-text_right">надо</span>
+        </h1>
+        <div class="cover__description">
+          <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
+          <button class="bet-button">Сделать ставку</button>
+        </div>
+        <div class="overlay"></div>
+      </section>
+    </div>
+
+    <!-- <section class="cover">
       <h1 class="cover__title">
         <span class="aligned-text aligned-text_left">Оно</span>
         <span class="aligned-text aligned-text_center">тебе</span>
@@ -52,19 +68,20 @@
         <button class="bet-button">Сделать ставку</button>
       </div>
       <div class="overlay"></div>
-    </section>
+    </section> -->
 
     <section class="lots padding-wrapper">
-      <h1 class="lots__heading">лоты</h1>
+      <h2 class="lots__heading">лоты</h2>
       <ul class="lots__card-list">
         <li class="lots__card-list-item">
           <a class="card-link">
             <article class="card card_type_film">
-              <h2 class="card__title">
+              <h3 class="card__title">
                 Фильм режиссёра, который бросил киношколу
-              </h2>
+              </h3>
               <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не
-                знали, что режиссёр — Пол Томас Андерсон?</p>
+                знали, что режиссёр — Пол Томас Андерсон?
+              </p>
             </article>
           </a>
           <div class="overlay"></div>
@@ -72,11 +89,14 @@
         <li class="lots__card-list-item">
           <a class="card-link">
             <article class="card card_type_book">
-              <h2 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h2>
+              <h3 class="card__title">
+                Книга, где описан один скучный день из жизни рекламного агента
+              </h3>
               <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на
                 древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная
                 с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на
-                «Улисса» Джеймса Джойса?</p>
+                «Улисса» Джеймса Джойса?
+              </p>
             </article>
           </a>
           <div class="overlay"></div>
@@ -84,10 +104,13 @@
         <li class="lots__card-list-item">
           <a class="card-link">
             <article class="card card_type_picture">
-              <h2 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h2>
+              <h3 class="card__title">
+                Картина, которую повторит даже 5-летний сын маминой подруги
+              </h3>
               <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на
                 инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали,
-                что это — одна из революционных работ Кандинского?</p>
+                что это — одна из революционных работ Кандинского?
+              </p>
             </article>
           </a>
           <div class="overlay"></div>
@@ -104,7 +127,7 @@
       </div>
 
       <div class="about__column">
-        <h1 class="about__title">Об аукционе</h1>
+        <h2 class="about__title">Об аукционе</h2>
         <div class="text-wrapper">
           <p class="about__text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.
             Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка
