fix: Fixed main problems

--- a/index.html
+++ b/index.html
@@ -40,24 +40,7 @@
 
   </header>
   <main>
-
-    <div class="layout-checker">
-      <img src="cover1.jpg" alt="Макет для сверки" class="layout-checker__overlay">
-      <section class="cover">
-        <h1 class="cover__title">
-          <span class="aligned-text aligned-text_left">Оно</span>
-          <span class="aligned-text aligned-text_center">тебе</span>
-          <span class="aligned-text aligned-text_right">надо</span>
-        </h1>
-        <div class="cover__description">
-          <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
-          <button class="bet-button">Сделать ставку</button>
-        </div>
-        <div class="overlay"></div>
-      </section>
-    </div>
-
-    <!-- <section class="cover">
+    <section class="cover">
       <h1 class="cover__title">
         <span class="aligned-text aligned-text_left">Оно</span>
         <span class="aligned-text aligned-text_center">тебе</span>
@@ -68,7 +51,7 @@
         <button class="bet-button">Сделать ставку</button>
       </div>
       <div class="overlay"></div>
-    </section> -->
+    </section>
 
     <section class="lots padding-wrapper">
       <h2 class="lots__heading">лоты</h2>
@@ -164,23 +147,25 @@
       </ul>
     </nav>
 
-    <ul class="footer__social-list">
-      <li class="footer__social-list-item">
-        <a class="footer__social-link" href="#">
-          <img class="footer__social-icon" src="images/yt.svg" alt="Логотип youtube">
-        </a>
-      </li>
-      <li class="footer__social-list-item">
-        <a class="footer__social-link" href="#">
-          <img class="footer__social-icon" src="images/vk.svg" alt="Логотип VK">
-        </a>
-      </li>
-      <li class="footer__social-list-item">
-        <a class="footer__social-link" href="#">
-          <img class="footer__social-icon" src="images/pinterest.svg" alt="Логотип Pinterest">
-        </a>
-      </li>
-    </ul>
+    <div class="social-list-container">
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#">
+            <img class="footer__social-icon" src="images/yt.svg" alt="Логотип youtube">
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#">
+            <img class="footer__social-icon" src="images/vk.svg" alt="Логотип VK">
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#">
+            <img class="footer__social-icon" src="images/pinterest.svg" alt="Логотип Pinterest">
+          </a>
+        </li>
+      </ul>
+    </div>
 
   </footer>
 </body>
